--- a/_posts/2023-12-07-开篇.md
+++ b/_posts/2023-12-07-开篇.md
@@ -6,3 +6,9 @@ categories: [猪]
 12月2日下午风雨大作
 
 是这样的，那天，老张骑猪上高速，驶入应急车道。**速度飙到了114km/h。**
+
+因为是骑猪，没挡风玻璃，所以沙子里进眼睛了。
+
+> 某路人：沙子里面，进眼睛了？
+
+进了眼睛之后，老张看不见，转角撞上了
