--- a/_posts/2023-12-07-开篇.md
+++ b/_posts/2023-12-07-开篇.md
@@ -7,10 +7,12 @@ categories: [猪]
 
 是这样的，那天，老张骑猪上高速，驶入应急车道。**速度飙到了114km/h。**
 
+![极(其)简(陋)](老张画得最好的一次.jpg "画得最好的一次")
+
 因为是骑猪，没挡风玻璃，所以沙子里进眼睛了。
 
 > 某路人：沙子里面，进眼睛了？
 
 进了眼睛之后，老张看不见，转角撞上了老黄。
 
-是骑猪的教练
+老黄是骑猪的教练。于是教练发现医院无线网真快。
