--- a/_posts/2023-12-07-开篇.md
+++ b/_posts/2023-12-07-开篇.md
@@ -3,12 +3,18 @@ layout: mypost
 title: 开篇
 categories: [猪]
 ---
-12月2日下午风雨大作
+```cpp
+long long ago;
+```
 
 是这样的，那天，老张骑猪上高速，驶入应急车道。**速度飙到了114km/h。**
+
+![老张画的，极(其)简(陋)](老张画得最好的一次.jpg "画得最好的一次")
 
 因为是骑猪，没挡风玻璃，所以沙子里进眼睛了。
 
 > 某路人：沙子里面，进眼睛了？
 
-进了眼睛之后，老张看不见，转角撞上了
+进了眼睛之后，老张看不见，转角撞上了老黄。
+
+老黄是骑猪的教练。于是教练发现医院无线网真快。
