--- a/_posts/2023-12-12-c1.md
+++ b/_posts/2023-12-12-c1.md
@@ -3,4 +3,4 @@ layout: mypost
 title: 第1章
 categories: [医院,香蕉]
 ---
-老张、小鸽子和Rain-0x01一起去医院看教练。Rain-0x01带了一箱香蕉。
+老张、小鸽子和Rain-0x01一起去医院看教练。Rain-0x01带了一箱香蕉，小鸽子带了一箱煮不熟的牛角，老张带了一箱万捅筋古贴。
